엔화 가격만 표시(postman 테스트 완료)